[package]
name = "todo_list"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
# gpui-component-assets = "0.5"
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
rust-embed = "8.11"
chrono = "0.4"
config = "0.15"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
getset = "0.1"